# parakeet-rt

./: .gitignore  CODE_TOUR.md  Cargo.toml  README.md  download_models.sh  index.html  test_chunk_size.sh
.github/workflows/: macos-debug.yml  windows-debug.yml
.kiro/specs/audio-resampling-16khz/: design.md  requirements.md  tasks.md
.kiro/specs/frame-processor-trait/: design.md  requirements.md  tasks.md
.kiro/specs/microphone-health-monitor/: design.md  requirements.md  tasks.md
.kiro/specs/parakeet-mic-tracing/: design.md  requirements.md  tasks.md
.kiro/specs/tauri-parakeet-transcription/: design.md  requirements.md  tasks.md
.kiro/specs/thiserror-tracing-migration/: design.md  requirements.md  tasks.md
.tours/: parakeet-codetour.tour
crates/frame-processor/: Cargo.toml
crates/frame-processor/src/: lib.rs
crates/parakeet/: Cargo.toml
crates/parakeet-mic/: Cargo.toml  README.md
crates/parakeet-mic/examples/: audio_save_demo.md
crates/parakeet-mic/src/: health.rs  lib.rs  main.rs  output.rs
crates/parakeet-ws/: Cargo.toml  README.md  USAGE.md  index.html
crates/parakeet-ws/src/: lib.rs  main.rs  output.rs
crates/parakeet/examples/: README.md  STREAMING.md  debug_outputs.rs  debug_transcribe.rs  simple_streaming.rs  streaming_transcribe.rs  transcribe_audio.rs
crates/parakeet/src/: decoder.rs  error.rs  execution.rs  lib.rs  model.rs  parakeet_tdt.rs  streaming.rs  utils.rs  vocab.rs  vocabulary.rs
crates/parakeet/tests/: integration_test.rs
crates/silero/: Cargo.toml  README.md
crates/silero/examples/: realtime_speech_recorder.rs  test_speech_recorder.rs
crates/silero/src/: lib.rs  model.rs  silero.rs  streaming.rs  utils.rs
crates/silero/tests/: integration_test.rs  streaming_integration_test.rs
crates/vad/: Cargo.toml  README.md
crates/vad/examples/: microphone_vad.rs  realtime_speech_recorder.rs  realtime_vad_example.rs  simple_microphone_vad.rs  simple_realtime_usage.rs  test_speech_recorder.rs
crates/vad/src/: lib.rs  silero.rs  streaming_vad.rs
crates/vad/tests/: integration_test.rs  streaming_integration_test.rs
crates/vosk/: Cargo.toml  build.rs
crates/vosk/examples/: mic.rs
parakeet-mic-tauri/: package.json
parakeet-mic-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
parakeet-mic-tauri/src-tauri/src/: lib.rs  main.rs
parakeet-mic-tauri/src/routes/: +page.svelte
parakeet-mic-tauri/src/routes/settings/: +page.svelte
python/: compare_outputs.py  convert_rust_outputs.py  debug_tdt.py  pyproject.toml  silero.py  test_tdt_simple.py  vad_analyzer.py
