[package]
name = "parakeet-mic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parakeet-mic"
path = "src/main.rs"

[dependencies]
parakeet = { path = "../parakeet", features = ["audio"] }
frame-processor = { path = "../frame-processor" }
cpal = "0.15"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.0"
rtrb = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio resampling
rubato = "0.15"

[features]
openvino = ["parakeet/openvino"]
coreml = ["parakeet/coreml"]
