[package]
name = "parakeet"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.1"
ndarray = "0.16.1"
rustfft = "6.4.1"
ndarray-stats = "0.6.0"
hound = { version = "3.5.1", optional = true }
rtrb = "0.3.2"

[dev-dependencies]
hound = "3.5.1"

[features]
default = []
audio = ["hound"]

[[example]]
name = "transcribe_audio"
required-features = ["audio"]

[[example]]
name = "debug_transcribe"
required-features = ["audio"]

[[example]]
name = "debug_outputs"
required-features = ["audio"]

[[example]]
name = "streaming_transcribe"
required-features = ["audio"]

[[example]]
name = "simple_streaming"
required-features = ["audio"]
