[package]
name = "vad"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rtrb = "0.3.2"
frame-processor = { path = "../frame-processor" }
async-trait = "0.1"

[dev-dependencies]
hound = "3.5.1"
tracing-subscriber = "0.3"
rand = "0.8"
cpal = "0.16.0"
